test/bad/generics/def10.px

func f<T>(): Void def
    x: T

f()
